--- a/donation_stripe/donation_stripe.links.menu.yml
+++ b/donation_stripe/donation_stripe.links.menu.yml
@@ -2,6 +2,6 @@ donation_stripe.settings_form:
   title: 'Donation Stripe Settings'
   route_name: donation_stripe.settings_form
   description: 'Settings for Donation Stripe integration'
-  parent: system.admin_config_system
+  parent: donation.donation_settings
   weight: 99
 
